# burn-experiment

./: .gitignore  Cargo.toml  cubecl.toml
.workshop/: insightface.yaml
burn-300w-lp/: Cargo.toml
burn-300w-lp/src/: lib.rs
burn-3ddfa/: Cargo.toml
burn-3ddfa/src/: downloader.rs  lib.rs
convnext-burn/: Cargo.toml
matio/: Cargo.toml
matio-sys/: Cargo.toml  build.rs
matio/examples/: dump.rs
matio/src/: lib.rs
sixdrepnet360-burn/: Cargo.toml
sixdrepnet360-burn/src/: block.rs  lib.rs  sixdrepnet360.rs  weights.rs
src/: main.rs
