[workspace]
members = ["burn-300w-lp", "matio", "matio-sys"]

[workspace.dependencies]
matio.path = "matio"
matio-sys.path = "matio-sys"

[package]
name = "burn-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.21.0", features = ["autotune", "autodiff", "fusion", "rocm", "train", "vision"] }
burn-300w-lp = { path = "burn-300w-lp" }
image = "0.25.10"
resnet-burn = { git = "https://github.com/tracel-ai/models", package = "resnet-burn", default-features = false, features = ["pretrained"] }
