[workspace]
members = ["burn-3ddfa", "convnext-burn", "matio", "matio-sys"]

[workspace.dependencies]
burn = "0.21.0"
resnet-burn = { git = "https://github.com/tracel-ai/models", package = "resnet-burn", default-features = false, features = ["pretrained"] }
mobilenetv2-burn = { git = "https://github.com/tracel-ai/models", package = "mobilenetv2-burn", default-features = false }

# Local dependencies
burn-3ddfa.path = "burn-3ddfa"
matio.path = "matio"
matio-sys.path = "matio-sys"

[package]
name = "burn-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
burn-3ddfa.workspace = true
resnet-burn.workspace = true
mobilenetv2-burn.workspace = true
burn = { version = "0.21.0", features = ["autotune", "autodiff", "fusion", "rocm", "train", "vision"] }
image = "0.25.10"
tokio = "1.52.3"

[profile.release]
debug = true
